--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "devDependencies": {
     "@wdio/allure-reporter": "^8.15.10",
     "@wdio/appium-service": "^8.15.10",
+    "@wdio/browserstack-service": "^8.16.7",
     "@wdio/cli": "^8.15.10",
     "@wdio/local-runner": "^8.15.10",
     "@wdio/mocha-framework": "^8.15.10",
     "@wdio/spec-reporter": "^8.15.10",
     "appium-uiautomator2-driver": "^2.29.5",
+    "eslint": "^8.49.0",
+    "eslint-plugin-wdio": "^8.8.7",
     "wdio-wait-for": "^3.0.6"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ts-node": "^10.9.1"
   }
 }
