--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,12 +10,12 @@ jobs:
           with:
             node-version: 18
         - name: Install
-          run: npm install
+          run: npm install 
           env:
            BROWSERSTACK_USER: ${{ secrets.BS_USER }}
            BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
         - name: Test
-          run: npx wdio run ./config/wdio.andriod.bs.config.js --spec ./test/specs/android/test.e2e.js
+          run: npx wdio run config/wdio.andriod.bs.config.js --spec test/specs/android/test.e2e.js
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
